--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta property="og:image" content="http://holvagypetra.hu/images/felirat.png"/>
 <meta property="og:site_name" content="Hol vagy Petra?"/>
 <meta property="og:type" content="article"/>
-<meta property="og:description" content="Keresek egy Petra nevű, csinos, szőke lányt. Megismertem, nem kértem el a számát, megbántam. Segítsetek megtalálni!"/>
+<meta property="og:description" content="Keresek egy Petra nevű, csinos, szőke lányt. Találkoztunk, nem kértem el a számát, megbántam. Segítsetek megtalálni!"/>
 <title>Hol vagy Petra?</title>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" ></script>
 <script type="text/javascript">
@@ -152,7 +152,7 @@ html,body {
 <div id="csaj"><img id="girl"  src="images/mannequin_m.png" alt="Petrát imitáló fényképmontázs"></div>
 
 	<div id="text">	
-		<p>Keresek egy Petra nevű, csinos, szőke lányt. Megismertem, nem kértem el a számát, megbántam. De mivel irtó sármos, intelligens és humoros is vagyok, minden bizonnyal odáig lesz, ha meglelem. A legfontosabb információk, amikről ráismerhetsz:</p>
+		<p>Keresek egy Petra nevű, csinos, szőke lányt. Találkoztunk, nem kértem el a számát, megbántam. De mivel irtó sármos, intelligens és humoros is vagyok, minden bizonnyal odáig lesz, ha meglelem. A legfontosabb információk, amikről ráismerhetsz:</p>
 		<ul id="list">
 			<li>Petra szőke</li>
 			<li>Petra !!!nagyon!!! csinos</li>
@@ -163,7 +163,7 @@ html,body {
 			<li>a narancs savanyú</li>
 			<li>EFOTT + BME napok</li>
 		</ul>
-		<p>Nem egészen normális dolog így keresni egy lányt, de miért ne? Ha úgy gondolod ráismertél, vagy esetleg magadra, küldd el a tippedet! A becsületes megtalálónak természetesen busás jutalom, Petrának örök boldogság.</p>
+		<p>Nem egészen normális dolog így keresni egy lányt, de miért ne? Ha úgy gondolod ráismertél, vagy esetleg magadra, küldd el a tippedet! A becsületes megtalálónak természetesen busás jutalom, Petrának örök boldogság. Egy próbát megér. :)</p>
 	</div>
 	<div id="form">
 		<form id="emailform" >  
