--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE HTML>
 <html>
+<html prefix="og: http://ogp.me/ns#">
 <head>
 <link rel="icon" type="image/gif" href="images/favicon.gif">
 <meta charset="UTF-8">
@@ -212,13 +213,16 @@ $( document ).ready(function() {
 	});
 });
 
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-46459323-1', 'holvagypetra.hu');
   ga('send', 'pageview');
+
+
 </script>	
 </body>
 </html>
